feat:实现居中图片点击翻转和四周图片点击居中

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -25,6 +25,12 @@ html, body {
   height: 100%;
   overflow: hidden;
   background-color: #ddd;
+
+  /*
+   * 添加景深，增强3D效果。
+   * 当为元素设置perspective，子元素会获得透视效果，而不是元素本身
+   */
+  perspective: 1800px;
 }
 
 /* image --end */
