--- a/src/styles/img_figure.css
+++ b/src/styles/img_figure.css
@@ -6,6 +6,18 @@
   padding: 40px;
   box-sizing: border-box;
   background-color: #fff;
+
+  cursor: pointer;
+  transform-origin: 0 50% 0;
+  /* 被转换元素的位置 3D的分别对应: x轴，y轴，z轴，默认是：50% 50% 0 */
+  transform-style: preserve-3d;
+  /* 子元素将保留其3D位置 */
+  transition: transform 0.6s ease-in-out, left 0.6s ease-in-out, top 0.6s ease-in-out;
+
+}
+
+.img-figure.is-inverse {
+  transform: translate(320px) rotateY(180deg);
 }
 
 .img-figure img {
@@ -15,6 +27,26 @@
 
 figcaption {
   text-align: center;
+}
+
+figcaption .img-back {
+  position: absolute;
+  /* 相对于img-sec进行定位 */
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box;
+  padding: 50px 40px;
+  overflow: auto;
+  color: #666;
+  background: #fff;
+  transform: rotateY(180deg) translateZ(1px);
+
+}
+
+.img-back p {
+  margin: 0;
 }
 
 .img-title {
