--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -36,13 +36,12 @@ html, body {
 /* image --end */
 
 /* controller --start */
-.controller-sec {
+.control-nav {
   position: absolute;
   left: 0;
   bottom: 30px;
   z-index: 10;
   width: 100%;
-
   text-align: center;
 }
 
